# clever

./: .cproject  .project  CMakeLists.txt  TODO
src/clever/: builtin.hpp  cl.hpp  cl_libs.h  clever.hpp  context.hpp  context_factory.hpp  error.hpp  for_each.hpp  icontext.hpp  ikernel_proxy.hpp  iopencl.hpp  kernel.hpp  kernel_base.hpp  kernel_parameter.hpp  kernel_proxy.hpp  kernel_storage.hpp  opencl.hpp  profiling.hpp  range.hpp  timing.h  transfer.hpp  types.hpp
src/clever/benchmark/: clever_benchmarks.h
src/clever/code_gen/: gen_kernelfile.py
src/clever/collection/: Collection.hpp  CollectionView.h  DataItems.h  OpenCLCollection.h  OpenCLTransfer.h
src/clever/serialize/test/: clever_test_serialize.h
src/clever/test/: clever_test.h  clever_test_collection.h  clever_test_example.h  clever_test_kernels.h  clever_test_memory.h  clever_test_runtime.h  clever_test_runtime_intel.h  clever_test_types.h  clever_tests.h  openclam_types.h  test_support.h
src/test/: clever_test.cpp
